# miner

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
assets/: image_credits.txt  original_miner.txt  sound_credits.txt
golang/: go.mod
rust/: Cargo.toml
rust/src/game/: mod.rs
src/: constants.rs  game.rs  lib.rs  main.rs  map.rs  prelude.rs
src/game/: mine.rs  mod.rs
src/model/: elevator.rs  map.rs  mod.rs  player.rs
src/systems/: elevator.rs  input.rs  mod.rs  player.rs  render.rs  render_player.rs  text.rs
